--- a/marketing.html
+++ b/marketing.html
@@ -105,26 +105,26 @@
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">
-                        <strongWhat We Do</strong>
+                        <strong>What We Do</strong>
                     </h2>
                     <hr>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <img class="img-responsive" src="img/05.jpg" alt="">
                     <h3>Events
                         <small>Invitations, RSVP Cards, Place Names, Seating Plans, Signage, Personalised Items, Posters, Flyers</small>
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <img class="img-responsive" src="img/03.jpg" alt="">
                     <h3>Business
                         <small>Business Cards, Brochures, Catalogues, Manuals, Presentation Folders, Packaging, Letterheads, Logos</small>
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <img class="img-responsive" src="img/04.jpg" alt="">
                     <h3>Misc
-                        <small>Menus, Decals, Labels, Hats, T-shirts, Apparel, Memory Sticks, Photography, Banners and more! </small>
+                        <small>Menus, Decals, Labels, Hats, T-shirts, Apparel, Memory Sticks, Photography, Banners, Pens, and more! </small>
                     </h3>
                 </div>
                 <div class="clearfix"></div>
