--- a/print.html
+++ b/print.html
@@ -105,7 +105,7 @@
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">
-                        <strongWhat We Do</strong>
+                        <strong>What We Do</strong>
                     </h2>
                     <hr>
                 </div>
@@ -124,7 +124,7 @@
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="img/04.jpg" alt="">
                     <h3>Misc
-                        <small>Menus, Decals, Labels, Hats, T-shirts, Apparel, Memory Sticks, Photography, Banners and more! </small>
+                        <small>Menus, Decals, Labels, Hats, T-shirts, Apparel, Memory Sticks, Photography, Banners, Pens, and more! </small>
                     </h3>
                 </div>
                 <div class="clearfix"></div>
@@ -138,7 +138,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Litte Spoon 2017</p>
+                    <p>Copyright &copy; Little Spoon 2017</p>
                 </div>
             </div>
         </div>
