--- a/print.html
+++ b/print.html
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-    <img class="img-fluid" src="img/LittleSpoon.jpg" align="center" alt="Little Spoon Creative Logo">
+    <div class="brand" src="img/LittleSpoon.jpg" alt="Little Spoon Creative Logo">
     <div class="address-bar">Graphic Design | Print | Marketing</div>
 
     <!-- Navigation -->
